# sh

./: README.md
.github/workflows/: build-python314-portable.yml  build-python314-wheels.yml  python3.14.yml
en/: kejilion.sh
hass/: 1.sh  11.sh  111.sh  2.sh  3.sh  31.sh  insall.sh  insall222.sh  install2_sudo_and_run.sh  install_ha_cn.sh  install_run.sh  install_sudo_and_run.sh  python3.14.3.sh  set_static_ip.sh  sudo.sh  自建ha.txt
jp/: kejilion.sh
kr/: kejilion.sh
nodepass/: np.sh
xoai-wheels/: README.md  pyproject.toml
xoai-wheels/src/xoai_wheels/: __init__.py
